--- a/Pages/Facturacion/FacturaContado.razor
+++ b/Pages/Facturacion/FacturaContado.razor
@@ -260,7 +260,8 @@ else
     {
         <div class="row">
             <div class="col-12">
-                <h1 class="titulo">@TituloForm</h1>
+                <h1 class="titulo d-print-none">@TituloForm</h1>
+                <h1 class="d-none d-print-block text-center">@TituloForm</h1>
             </div>
         </div>
 
